k8s-specifications/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    app: db
  ports:
    - name: "db-service"
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
