k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  selector:
    app: result
  ports:
    - name: "result-service"
      protocol: TCP
      port: 5001
      targetPort: 80
  type: LoadBalancer
