k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  selector:
    app: vote
  ports:
    - name: "vote-service"
      protocol: TCP
      port: 5000
      targetPort: 80
  type: LoadBalancer
