k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: db.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: db
            port:
              number: 5432
  - host: redis.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis
            port:
              number: 6379
  - host: vote.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 5000
  - host: result.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 5001
